# tasks-test

./: .gitignore  CLAUDE.md  SKILLS.md
Cloud-Native-FastAPI/: Dockerfile  main.py  pytest.ini  test_main.py
claude-code-skills-lab-main/: README.md
claude-code-skills-lab-main/.claude/skills/fastapi-builder/: SKILL.md
claude-code-skills-lab-main/.claude/skills/fastapi-builder/examples/crud-api/: main.py  pyproject.toml  test_main.py
claude-code-skills-lab-main/.claude/skills/fastapi-builder/examples/hello-world/: main.py  pyproject.toml
claude-code-skills-lab-main/.claude/skills/fastapi-builder/references/: authentication.md  best-practices.md  database-integration.md
claude-code-skills-lab-main/.claude/skills/fastapi-builder/scripts/: create_project.py  generate_crud.py  verify.py
docproject/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_main.py
kubproject/: hello-world.yaml  nginx-pod.yaml
kubproject/.claude/skills/kubernetes-deployer/: SKILL.md
kubproject/ai-agent/: deployment.yaml
tasks-test/: .gitignore  README.md  main.py  pyproject.toml  test_main.py
tasks-test/.claude/skills/: fastapi-agent-api.md
