[project]
name = "cloud-native-fastapi"
version = "0.1.0"
description = "A cloud-native FastAPI starter application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.7.0",
    "httpx[http2]>=0.27.0",
    "sqlmodel>=0.0.8",
    "databases[sqlite]>=0.7.0",
    "alembic>=1.11.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
