[project]
name = "tasks-test"
version = "0.1.0"
description = "A simple REST API for managing todos, built with FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
